testsuite/tests/indexed-types/should_fail/T5934.stderr

T5934.hs:12:7: error: [GHC-91028]
    • Couldn't match type ‘a0’
                     with ‘(forall s. Gen (PrimState (ST s))) -> Int’
      Expected: (forall s. GenST s) -> Int
        Actual: a0
      Cannot instantiate unification variable ‘a0’
      with a type involving polytypes:
        (forall s. Gen (PrimState (ST s))) -> Int
    • In the expression: 0
      In an equation for ‘run’: run = 0
